Fix horizontal bar issue when overflow

--- a/src/app/components/common/horizontalbar/horizontalbar.component.css
+++ b/src/app/components/common/horizontalbar/horizontalbar.component.css
@@ -15,6 +15,17 @@ span.progress-title {
   width: 200px;
 }
 
+span.progress-title-long {
+  position: absolute;
+  left: 80%;
+  font-size: 19px;
+  display: inline-table;
+  margin-top: 5px;
+  color: #95989A;
+  font-weight: 300;
+  width: 200px;
+}
+
 .progress-bar {
   border-radius: 15px; 
   position: relative;
